update about page: replace existing text with a quote on good design and add a link to motherfuckingwebsite.com for inspiration

--- a/about.html
+++ b/about.html
@@ -98,7 +98,20 @@
       </li>
     </ul>
 
-    <p>No JavaScript. No frameworks. No analytics. Just a webpage.</p>
+    <br />
+
+    <blockquote cite="https://www.vitsoe.com/us/about/good-design">
+      "Good design is as little design as possible."
+      <br />-
+      <a
+        href="https://motherfuckingwebsite.com/"
+        target="_blank"
+        rel="noreferrer"
+        >motherfuckingwebsite.com</a
+      >
+    </blockquote>
+
+    <br />
 
     <p><a href="index.html">Back to home</a></p>
   </body>
