--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nicolas's Web Page</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body bgcolor="#87CEEB" text="#000000" link="#0000FF" vlink="#800080">
     <center>
